# justmessage

./: .gitignore  Cargo.toml  NOTICE.md  README.md
ascase/: Cargo.toml
ascase/src/: lib.rs
cli/: Cargo.toml
cli/src/: grammar.pest  main.rs
codepoint/: Cargo.toml
codepoint/src/: lib.rs
fichar/: Cargo.toml
fichar/src/: command.rs  context.rs  input.rs  language.rs  lib.rs  main.rs  month.typ  output.rs  state.rs
fichar/src/command/: grammar-en.pest  grammar-es.pest  grammar.pest  parser.rs
fichar/src/state/: instance.rs
frontend/: Cargo.toml
frontend/src/: main.rs  super_command.pest
json/: Cargo.toml
json/src/: grammar.pest  lib.rs
just-message/: Cargo.toml
just-message/src/: lib.rs
lib-fichar/: Cargo.toml
lib-fichar/src/: command_parser.rs  grammar-en.pest  grammar-es.pest  grammar.pest  interpret.rs  lib.rs  spans.typ  state.rs  test.rs
render/: Cargo.toml
render/src/: in.json  lib.rs
render/src/cetz/src/: canvas.typ  complex.typ  mark-shapes.typ  mark.typ
render/src/cetz/src/lib/decorations/: path.typ
symtree/: Cargo.toml
symtree/src/: de.rs  error.rs  lib.rs  se.rs  test.rs
telegram/: Cargo.toml
telegram/src/: lib.rs  main.rs
time-util/: Cargo.toml
time-util/src/: lib.rs
webhook/: Cargo.toml
webhook/src/: main.rs
