[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
just-message = { path = "../just-message" }
lib-fichar = { path = "../lib-fichar" }
clap = { version = "4.5.41", features = ["derive"] }
symtree = { path = "../symtree" }
chrono = "0.4.41"
render = { path = "../render" }
pest_derive = "2.8.1"
pest = "2.8.1"
