[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rcgen = "0.14.3"
reqwest = { version = "0.12.23", features = ["rustls-tls", "json", "multipart"], default-features = false }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
clap = { version = "4.5.43", features = ["derive"] }
dotenvy = "0.15.7"
tokio-rustls = { version = "0.26.2", features = [ "ring" ], default-features = false }
hyper-util = "0.1.16"
hyper = "1.7.0"
tower-service = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["tracing"] }
lib-fichar = { path = "../lib-fichar" }
just-message = { path = "../just-message" }
slab = { version = "0.4.11", features = ["serde"] }
frankenstein = { version = "0.44.0", features = ["client-reqwest"] }
render = { path = "../render" }
telegram = { path = "../telegram" }
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
postcard = "1.1.3"
chrono-tz = { version = "0.10.4", features = ["serde"] }
