[package]
name = "lib-fichar"
version = "0.1.0"
edition = "2024"

[dependencies]
symtree = { path = "../symtree" }
ascase = { path = "../ascase" }
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
slab = { version = "0.4.10", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
just-message = { path = "../just-message" }
pest = "2.8.1"
pest_derive = "2.8.1"
chrono-tz = { version = "0.10.4", features = ["serde"] }
time-util = { path = "../time-util" }

[build-dependencies]
lalrpop = "0.22.2"
