[package]
name = "telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["rustls-tls", "multipart"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# clap = { version = "4.5.43", features = ["derive"] }
# dotenvy = "0.15.7"
# frankenstein = { version = "0.44.0", features = ["client-ureq"] }
# lib-fichar = { path = "../lib-fichar" }
# serde = { version = "1.0.219", features = ["derive"] }
# symtree = { path = "../symtree" }
# just-message = { path = "../just-message" }
# render = { path = "../render" }
